k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app1
spec:
  selector:
    app: python-app1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
